syntax = "proto3";
package nti.nti;

import "gogoproto/gogo.proto";
import "nti/params.proto";
import "nti/nft_transfer.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "nti/x/nti/types";

// GenesisState defines the nti module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated NftTransfer nftTransferList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
